--- a/css selector/style.css
+++ b/css selector/style.css
@@ -5,3 +5,10 @@ ol {
 }
 
 /* Write your CSS below, don't change the rules above. */
+h1{}
+h2{}
+p{ color: red;}
+.note{font-size: 20px;}
+#id-selector-demo{color: green;}
+li[value="4"]{color: blue;}
+*{text-align: center;}
